--- a/app.css
+++ b/app.css
@@ -3,10 +3,10 @@ body{
     justify-content:center;
     align-items:center;
     height:100vh;
-    background-color:black;
+    background-color:rgb(17,0,37)
 }
 
-h1{
+    h1{
     font-size:15rem;
     
 }
