just an example

--- a/app.css
+++ b/app.css
@@ -1,16 +1,1 @@
-body{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    background-color:olive;
-}
-
-    h1{
-    font-size:20rem;
-}
-
-
-.letter{
-    transition: color 100ms;
-}
+hihihhihi
